--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "filament/filament": "^3.0|^4.0",
         "filament/support": "^3.0|^4.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0|^11.0|^12.0"
+        "illuminate/contracts": "^10.0|^11.0|^12.0",
+        "nrep/filament-theme-switcher": "main"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -66,5 +67,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/nrep/filament-theme-switcher"
+        }
+    ]
 }
